<resources>
    <string name="app_name">I\'ve Lost</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main">Fragment Main</string>
    <string name="lostest">Потерял</string>
    <string name="profiler">Профиль</string>
    <string name="about_us">О нас</string>
    <string name="wish">Пожелания</string>
    <string name="messages">Сообщения</string>
    <string name="lost">Потерял</string>
    <string name="add">Добавить</string>
    <string name="profile">Профиль</string>
    <string name="found">Нашёл</string>
    <string name="lost_document">Потерян документ</string>
    <string name="lost_document_visaitovskiy">Потерял документ в Висаитовском районе</string>
    <string name="fragment_about_us">Фрагмент О нас</string>
    <string name="fragment_add">Фрагмент Добавить</string>
    <string name="long_text_lost_document">Вы потеряли сумку с документами? Или ваши вещи были украдены? Не волнуйтесь! Вы сможете восстановить все документы.</string>
    <string name="found_document">Найден документ</string>
    <string name="long_text_found_document">Кемеровская область, Новокузнецкий г.о., Новокузнецк, Запорожская ул., 7А р-н Центральный</string>
    <string name="fragment_messages">Фрагмент Сообщений</string>
    <string name="fragment_profile">Фрагмент Профиля</string>
    <string name="fragment_wishes">Фрагмент Пожеланий</string>
    <string name="fragment_settings">Фрагмент Настроек</string>
    <string name="what_you_lost">Что вы потеряли?</string>
    <string name="what_you_found">Что вы нашли?</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="button_send">Send</string>
    <string name="lost_document_text">Документы</string>
    <string name="lost_money_text">Деньги</string>
    <string name="lost_animal_text">Животное</string>
    <string name="lost_people_text">Люди</string>
    <string name="lost_jewelry_text">Драгоценности</string>
    <string name="lost_other_text">Другое</string>
    <string name="lost_personal_belongings_text">Личные вещи</string>
    <string name="lost_post">Объявление о потери</string>
    <string name="found_post">Объявление о находке</string>
    <string name="respond_to_photo">Откликнуться на объявление</string>
    <string name="lost_passport">Потерял паспорт</string>
    <string name="lost_money">Потерял деньги</string>
    <string name="lost_cat">Потерял кота</string>
    <string name="lost_airplane">Потерял самолет</string>
    <string name="lost_phone">Потерял телефон</string>
    <string name="lost_description_passport">Потерял паспорт в Висаитовском районе около пару дней назад. Никак не могу найти, пожалуйста помогите!</string>
    <string name="lost_description_money">Потерял деньги в Заводском районе вчера в райное 6 вечера, рядом с магазином "Магнит". Сумма небольшая</string>
    <string name="lost_description_cat">Потерял кота в Первомайском районе. Кот породой британец, около 6 месяцев, также на нем был ошейник розового цвета. Откликается на имя Барсик</string>
    <string name="lost_description_airplane">Потерял коллекционный игрушечный самолет в Ленинском районе 15 сентября 2019 года. Вознраграждение есть!</string>
    <string name="lost_description_phone">Потерял телефон в Октябрьском районе телефон марки XiaoMi модель Mi 10T купил совсем недавно.</string>
    <string name="lost_time_stamp_one">Сегодня, 16:38</string>
    <string name="lost_time_stamp_two">Вчера, 10:21</string>
    <string name="lost_time_stamp_three">Завтра, 22:19</string>
    <string name="lost_time_stamp_four">Сегодня, 15:03</string>
    <string name="lost_time_stamp_five">Вчера, 04:31</string>
    <string name="lost_location_one">Висаитовский район</string>
    <string name="lost_location_two">Заводской район</string>
    <string name="lost_location_three">Первомайский район</string>
    <string name="lost_location_four">Ленинский район</string>
    <string name="lost_location_five">Октябрьский район</string>
    <string name="ad_type_one">Тип документа</string>
    <string name="ad_type_two">Сумма денег</string>
    <string name="ad_type_three">Порода</string>
    <string name="ad_type_four">Тип вещи</string>
    <string name="ad_type_five">Модель</string>
    <string name="ad_type_object_one">Паспорт</string>
    <string name="ad_type_object_two">от 2 до 7 тыс</string>
    <string name="ad_type_object_three">Мейн Кун</string>
    <string name="ad_type_object_four">Boeing-777</string>
    <string name="ad_type_object_five">Xiao Mi 10T</string>
    <string name="found_passport">Нашел паспорт</string>
    <string name="found_money">Нашел деньги</string>
    <string name="found_cat">Нашел кота</string>
    <string name="found_airplane">Нашел самолет</string>
    <string name="found_phone">Нашел телефон</string>
    <string name="found_description_passport">Найден паспорт гражданина Соединенных Штатов Америки в Висаитовском районе. Если ваша фамилия Brown то отзовитесь!</string>
    <string name="found_description_money">Найдена небольшая сумма денег от 1000руб. до 10000руб. в Заводском районе. Деньги лежали рядом с магазином Магнит, отклинитесь!</string>
    <string name="found_description_cat">Найден кот британец по породе рядом с остановкой в Первомайском районе. На коте был розовый ошейник, привел пока домой, съел всю рыбу в доме.</string>
    <string name="found_description_airplane">Найден коллекционный игрушечный самолет 1998 года лимитированного издания в Ленинском районе. Был найдем вчера около 6 вечера.</string>
    <string name="found_description_phone">Найден телефон выглядит новым, марка XiaoMi модель телефона Mi 10T в Октябрьском районе, не смог разблокировать и позвонить родственникам владельца.</string>
    <string name="messages_names_one">Хьасан</string>
    <string name="messages_names_two">Сулиман</string>
    <string name="messages_names_three">Зайнап</string>
    <string name="messages_names_four">Адам</string>
    <string name="messages_names_five">Ильяс</string>
    <string name="messages_messages_one">Нашел твой потерянный документ по адресу Висоитовский район дом 146. Очень длинное сообщение</string>
    <string name="messages_messages_two">Брат можешь по больше информации предоставить?</string>
    <string name="messages_messages_three">Какого цвета была найденная кошка?</string>
    <string name="messages_messages_four">Ассаламу Аллейкум. Объявление всё ещё акутальное?</string>
    <string name="messages_messages_five">Нашел ваш самолет у себя в гараже.</string>
    <string name="search_menu">Поиск</string>
    <string name="username_edit_text">Имя пользователя</string>
    <string name="email_edit_text">Электронная почта</string>
    <string name="password_edit_text">Пароль</string>
    <string name="button_register">Регистрация</string>
    <string name="already_have_an_account_question">У вас уже есть аккаунт?</string>
    <string name="select_photo_button">Выберите фото</string>
    <string name="edit_text_login">Логин</string>
    <string name="back_to_registration">Вернуться на регистрацию</string>
    <string name="register_alert_dialog_header">Внимание!</string>
    <string name="register_alert_dialog_message">Чтобы пройти дальше вам сначало надо зарегистрироваться.</string>
    <string name="register_alert_dialog_positive_button">Регистрация</string>
    <string name="register_alert_dialog_negative_button">Отмена</string>
    <string name="register_alert_dialog_negative_toast">К сожалению, вы не можете зайти в профиль без регистрации.</string>
    <string name="fragment_register_login_toast_fill_data">Пожалуйста заполните все данные</string>
    <string name="chat_fragment_popup_menu_delete">Удалить</string>
    <string name="delete_me_later">Новое объявление</string>
    <string name="fragment_choose_lost_direction">Потерял</string>
    <string name="fragment_choose_found_direction">Нашел</string>
    <string name="header_for_main_recyclerview">header for main recyclerView</string>
    <string name="fragment_details_horizontal_recyclerview_item">fragment details horizontal recyclerView item</string>
    <string name="grid_layout_view_counter">grid layout view counter</string>
    <string name="grid_layout_item_options_button_menu">Grid layout item options button menu</string>
    <string name="look_in_the_map">Посмотреть на карте</string>
    <string name="details_fragment_category_text_view">Категория</string>
    <string name="who_are_we_text_view">Кто мы?</string>
    <string name="frequent_questions">Часто задаваемые вопросы</string>
    <string name="about_us_desc">Мы небольшая группа разработчиков из Чечни у которых зародилась эта идея о создании данного приложения и мы решили заняться её реализацией.
    Мы занимаемся разработкой приложений под андроид относительно недавно и решили сделать этот проект нашим первым "крупным" проектом
    над которым мы работаем вместе.
    </string>
    <string name="goal_of_app">Цель Приложения</string>
    <string name="contact_us_about_us">Обратная связь</string>
    <string name="our_email">Наша почта</string>
    <string name="our_telegram">Наш телеграм</string>
    <string name="our_whatsapp">Наш WhatsApp</string>
    <string name="app_permissions">Разрешения приложения</string>
    <string name="goal_of_the_app">Цель "I've lost" -  ускорить нахождения потерянных предметов посредством размещения объявлений
        \nПриложение "I've lost" создано для выполнения роли связующего звена между человеком потерявшим и нашедшим предмет и построения отношений  между этими лицами на уважительной основе.
    </string>
    <string name="app_permission_desc">Приложению требуется доступ к вашей локации для того чтобы размещать объявления о находке или потери вещи
    более аккуртно. \n\nТакже для использования нащего приложения необходим доступ к интернету. \n\nДля того чтобы вы могли размещать фотографии найденной или потерянной
    вещи приложнею потребуется разрешение доступа к фотография с ващего телефона.</string>
    <string name="our_email_desc">engno_95@mail.ru</string>
    <string name="our_telegram_desc">somebaudi</string>
    <string name="our_whatapp_desc">+7 (963)–584–49–02</string>
    <string name="dialog_logout_title">Выйти</string>
    <string name="dialog_logout_description">Вы действительно хотите выйти из вашего аккаунта?</string>
    <string name="dialog_logout_positive">Выйти</string>
    <string name="dialog_logout_negative">Отмена</string>
    <string name="dialog_logout_toast">Вы вышли из аккаунта</string>
    <string name="edit_profile_dialog_change_photo_button">Поменять фото</string>
    <string name="edit_profile_dialog_change_user_name">Поменять имя пользователя:</string>
    <string name="edit_profile_dialog_username">Ильяс</string>
    <string name="edit_profile_dialog_accept_button">Принять</string>
    <string name="edit_profile_dialog_cancel_button">Отмена</string>
    <string name="fragment_add_fill_the_data">Заполните данные</string>
    <string name="fragment_add_specify_place">Укажите место</string>
    <string name="fragment_add_specify_time">Укажите время</string>
    <string name="fragment_add_load_photo">Загрузить фото</string>
    <string name="fragment_add_additional_description">Дополнительное описание</string>
    <string name="fragment_add_reward">Вознаграждение</string>
    <string name="fragment_add_reward_description">Наличие вознаграждения увеличит шансы того что на ваше объявление кто нибудь откликниться.</string>
    <string name="fragment_add_confirm">подтвердить</string>
    <string name="your_add_menu_delete_header">Удалить</string>
    <string name="your_add_menu_delete_description">Вы действительно хотите удалить это объявление?</string>
    <string name="your_add_menu_delete_positive">Удалить</string>
    <string name="your_add_menu_delete_negative">Отмена</string>
    <string name="copy_text">Копировать</string>
    <string name="dark_theme">Ночной режим</string>
    <string name="home_menu">Домой</string>
</resources>