<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:gravity="center"
    tools:context=".view.fragments.menu.FragmentAbout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/logo_background_color"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/frequent_questions"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/fragment_about_who_are_we"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/who_are_we_text_view"
                android:textSize="22sp" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/about_us_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <TextView
                android:id="@+id/fragment_about_who_are_we2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/goal_of_app"
                android:textSize="22sp" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/goal_of_the_app"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <TextView
                android:id="@+id/fragment_about_who_are_we3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/app_permissions"
                android:textSize="22sp" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/app_permission_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_about_us"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/fragment_about_who_are_we4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="538dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/icon_mail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/our_email"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

            </LinearLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:id="@+id/copy_email_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/our_email_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <LinearLayout
                android:id="@+id/fragment_about_who_are_we5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="538dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/telegram" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/our_telegram"
                    android:textSize="22sp" />

            </LinearLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:id="@+id/copy_telegram_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/our_telegram_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <LinearLayout
                android:id="@+id/fragment_about_who_are_we6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="538dp"
                android:layout_marginBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/whatsapp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/our_whatsapp"
                    android:textSize="22sp" />

            </LinearLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_text_who_are_we6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="500"
                app:el_expanded="false">

                <TextView
                    android:id="@+id/copy_whatsapp_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/our_whatapp_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="8dp"/>

            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>