<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragments.registration.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tIL_login_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="184dp"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            android:hint="@string/email_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/icon_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIET_login_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tIL_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            android:hint="@string/password_edit_text"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/tIL_login_mail"
            app:layout_constraintStart_toStartOf="@+id/tIL_login_mail"
            app:layout_constraintTop_toBottomOf="@+id/tIL_login_mail"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIET_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit_text_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tIL_login_password"
            app:layout_constraintStart_toStartOf="@+id/tIL_login_password"
            app:layout_constraintTop_toBottomOf="@+id/tIL_login_password" />

        <TextView
            android:id="@+id/back_to_register_text_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/back_to_registration"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/login_button_login"
            app:layout_constraintStart_toStartOf="@+id/login_button_login"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>